--- a/PositionIn/Browse/BrowseList/PositionIn.BrowseListViewController.xib
+++ b/PositionIn/Browse/BrowseList/PositionIn.BrowseListViewController.xib
@@ -21,8 +21,10 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="a6X-i6-NUa">
-                    <rect key="frame" x="174.5" y="20" width="251" height="29"/>
+                    <rect key="frame" x="90" y="20" width="419" height="29"/>
                     <segments>
+                        <segment title="All"/>
+                        <segment title="Posts"/>
                         <segment title="Products"/>
                         <segment title="Events"/>
                         <segment title="Promotions"/>
@@ -35,19 +37,15 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="a6X-i6-NUa" secondAttribute="trailing" constant="5" id="7wr-hj-jfT"/>
                 <constraint firstAttribute="bottom" secondItem="rSU-D8-03P" secondAttribute="bottom" id="BnK-3b-bE1"/>
                 <constraint firstAttribute="centerX" secondItem="a6X-i6-NUa" secondAttribute="centerX" id="Fdm-iw-UTr"/>
-                <constraint firstItem="rSU-D8-03P" firstAttribute="top" secondItem="hh2-4T-SbM" secondAttribute="top" id="Kmx-Hh-9ki"/>
+                <constraint firstItem="a6X-i6-NUa" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="hh2-4T-SbM" secondAttribute="leading" constant="5" id="PTq-DO-NYs"/>
                 <constraint firstItem="rSU-D8-03P" firstAttribute="top" secondItem="a6X-i6-NUa" secondAttribute="bottom" constant="20" id="daa-NX-VxE"/>
                 <constraint firstAttribute="trailing" secondItem="rSU-D8-03P" secondAttribute="trailing" id="fIA-t9-lYr"/>
                 <constraint firstItem="rSU-D8-03P" firstAttribute="leading" secondItem="hh2-4T-SbM" secondAttribute="leading" id="gIx-mh-q7l"/>
                 <constraint firstItem="a6X-i6-NUa" firstAttribute="top" secondItem="hh2-4T-SbM" secondAttribute="top" constant="20" id="lVf-v4-dAH"/>
             </constraints>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="Kmx-Hh-9ki"/>
-                </mask>
-            </variation>
             <point key="canvasLocation" x="193" y="218"/>
         </view>
     </objects>
