--- a/PositionIn/NewItems/NewItems.storyboard
+++ b/PositionIn/NewItems/NewItems.storyboard
@@ -98,6 +98,53 @@
             </objects>
             <point key="canvasLocation" x="119" y="371"/>
         </scene>
+        <!--New Post-->
+        <scene sceneID="eaE-Sy-HP3">
+            <objects>
+                <viewController storyboardIdentifier="AddCommunityViewController" id="g4f-5s-ruZ" userLabel="New Post" customClass="AddCommunityViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sE9-RU-SkK"/>
+                        <viewControllerLayoutGuide type="bottom" id="mkL-JG-j6h"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sBb-gC-6Kd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="rrC-Ft-8kv">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rrC-Ft-8kv" firstAttribute="top" secondItem="sE9-RU-SkK" secondAttribute="bottom" id="AvP-vf-b9m"/>
+                            <constraint firstItem="rrC-Ft-8kv" firstAttribute="leading" secondItem="sBb-gC-6Kd" secondAttribute="leading" id="CgX-Us-Lto"/>
+                            <constraint firstAttribute="bottom" secondItem="rrC-Ft-8kv" secondAttribute="bottom" id="MPj-PB-bYl"/>
+                            <constraint firstAttribute="trailing" secondItem="rrC-Ft-8kv" secondAttribute="trailing" id="mIj-dL-IGq"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="New Post" id="RkT-bN-F8N">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="NP2-Ah-S0h">
+                            <connections>
+                                <segue destination="D7f-X0-Oo6" kind="unwind" unwindAction="prepareForUnwind:" id="2Ze-E2-O9I"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Post" id="209-eh-SGh">
+                            <connections>
+                                <action selector="didTapPost:" destination="g4f-5s-ruZ" id="a5S-nP-hVA"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tableView" destination="rrC-Ft-8kv" id="g8Q-VJ-lKs"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Eq-NV-nme" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="D7f-X0-Oo6" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="119" y="1024"/>
+        </scene>
         <!--New Promotion-->
         <scene sceneID="a6q-c8-Teh">
             <objects>
