--- a/PositionIn/Browse/BrowseMap/PositionIn.BrowseMapViewController.xib
+++ b/PositionIn/Browse/BrowseMap/PositionIn.BrowseMapViewController.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7706"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BrowseMapViewController" customModule="PositionIn" customModuleProvider="target">
             <connections>
+                <outlet property="mapView" destination="k3H-1B-hTO" id="J85-HV-IQN"/>
                 <outlet property="view" destination="apz-CI-lnL" id="Ctj-nF-5fk"/>
             </connections>
         </placeholder>
@@ -14,16 +15,17 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="satellite" translatesAutoresizingMaskIntoConstraints="NO" id="Ciz-mK-IHm">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k3H-1B-hTO" customClass="GMSMapView" customModule="GoogleMaps">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                </mapView>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="Ciz-mK-IHm" secondAttribute="trailing" id="IwO-ko-cvZ"/>
-                <constraint firstAttribute="bottom" secondItem="Ciz-mK-IHm" secondAttribute="bottom" id="Z1o-eZ-dRK"/>
-                <constraint firstItem="Ciz-mK-IHm" firstAttribute="top" secondItem="apz-CI-lnL" secondAttribute="top" id="dH6-qI-SYG"/>
-                <constraint firstItem="Ciz-mK-IHm" firstAttribute="leading" secondItem="apz-CI-lnL" secondAttribute="leading" id="qFN-NF-U6F"/>
+                <constraint firstAttribute="trailing" secondItem="k3H-1B-hTO" secondAttribute="trailing" id="31D-fH-APf"/>
+                <constraint firstAttribute="bottom" secondItem="k3H-1B-hTO" secondAttribute="bottom" id="Fqs-WL-JPg"/>
+                <constraint firstItem="k3H-1B-hTO" firstAttribute="top" secondItem="apz-CI-lnL" secondAttribute="top" id="waG-Ox-RkM"/>
+                <constraint firstItem="k3H-1B-hTO" firstAttribute="leading" secondItem="apz-CI-lnL" secondAttribute="leading" id="xvE-Ze-CdW"/>
             </constraints>
         </view>
     </objects>
